# case-ta6-experimental-platform-models

./: DARPA CASE TA6 UAV Architectural Models.docx  README.md
Phase-2-UAV-Experimental-Platform/: .project  CASEAgree.aadl  CASECMASI.aadl  CASEConsts.aadl  CASEServices.aadl  InfoFlow.aadl  agree-contracts.md
Phase-2-UAV-Experimental-Platform-June/: .project  CM_Property_Set.aadl
Phase-2-UAV-Experimental-Platform-June/CAmkES_sel4_VM/: CMakeLists.txt  SW_Impl_Instance.camkes
Phase-2-UAV-Experimental-Platform-June/UAV/: MC.aadl  SW.aadl
Phase-2-UAV-Experimental-Platform-June/UxAS/Message Definitions/: CMASI.aadl
Phase-2-UAV-Experimental-Platform-June/diagrams/: MC_MissionComputer_Impl.aadl_diagram  SW_SW_Impl.aadl_diagram  UAV_UAV_Impl.aadl_diagram
Phase-2-UAV-Experimental-Platform-June/hamr/: build.sbt
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/: CMakeLists.txt  sizes.txt  typemap.properties
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-MissionComputer_Impl_Instance_PROC_SW_FC_UART_UARTDriver_App/: MissionComputer_Impl_Instance_PROC_SW_FC_UART_UARTDriver_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-MissionComputer_Impl_Instance_PROC_SW_FLT_LST_CASE_Filter_LST_App/: MissionComputer_Impl_Instance_PROC_SW_FLT_LST_CASE_Filter_LST_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-MissionComputer_Impl_Instance_PROC_SW_FlyZones_FlyZonesDatabase_App/: MissionComputer_Impl_Instance_PROC_SW_FlyZones_FlyZonesDatabase_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-MissionComputer_Impl_Instance_PROC_SW_MON_GEO_CASE_Monitor_Geo_App/: MissionComputer_Impl_Instance_PROC_SW_MON_GEO_CASE_Monitor_Geo_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-MissionComputer_Impl_Instance_PROC_SW_MON_REQ_CASE_Monitor_Req_App/: MissionComputer_Impl_Instance_PROC_SW_MON_REQ_CASE_Monitor_Req_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-MissionComputer_Impl_Instance_PROC_SW_UXAS_UxAS_App/: MissionComputer_Impl_Instance_PROC_SW_UXAS_UxAS_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-SW_Impl_Instance_AM_Gate_CASE_AttestationGate_App/: SW_Impl_Instance_AM_Gate_CASE_AttestationGate_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-SW_Impl_Instance_FC_UART_UARTDriver_App/: SW_Impl_Instance_FC_UART_UARTDriver_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-SW_Impl_Instance_FLT_LST_CASE_Filter_LST_App/: SW_Impl_Instance_FLT_LST_CASE_Filter_LST_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-SW_Impl_Instance_FlyZones_FlyZonesDatabase_App/: SW_Impl_Instance_FlyZones_FlyZonesDatabase_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-SW_Impl_Instance_MON_GEO_CASE_Monitor_Geo_App/: SW_Impl_Instance_MON_GEO_CASE_Monitor_Geo_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-SW_Impl_Instance_MON_REQ_CASE_Monitor_Req_App/: SW_Impl_Instance_MON_REQ_CASE_Monitor_Req_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-SW_Impl_Instance_RADIO_RadioDriver_Attestation_App/: SW_Impl_Instance_RADIO_RadioDriver_Attestation_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-SW_Impl_Instance_UXAS_UxAS_App/: SW_Impl_Instance_UXAS_UxAS_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/app-SW_Impl_Instance_WPM_WaypointPlanManagerService_App/: SW_Impl_Instance_WPM_WaypointPlanManagerService_App.c
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/ext/: CASE_Filter_LST_thr_Impl_Impl.c  CASE_Monitor_Req_thr_Impl_Impl_api.h  FlyZonesDatabase_thr_Impl_Impl.c  UARTDriver_Impl_Impl.c  UARTDriver_Impl_Impl_api.h  WaypointPlanManagerService_thr_Impl_Impl_api.c  WaypointPlanManagerService_thr_Impl_Impl_api.h
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/macOS-build/: CMakeCache.txt  Makefile  cmake_install.cmake
Phase-2-UAV-Experimental-Platform-June/hamr/src/c/nix/runtime/: all.c  all.h  type-composite.h  types.c  types.h
Phase-2-UAV-Experimental-Platform-June/kernel/: domain_schedule.c
Phase-2-UAV-Experimental-Platform-Transformed/: CASEAgree.aadl  CM_Property_Set.aadl
Phase-2-UAV-Experimental-Platform-Transformed/CASE/: CASE_Model_Transformations.aadl
Phase-2-UAV-Experimental-Platform-Transformed/GS/: GS_SW.aadl
Phase-2-UAV-Experimental-Platform-Transformed/UAV/: Drivers.aadl  FC.aadl  GC.aadl  MC.aadl  SW.aadl  UAV.aadl
Phase-2-UAV-Experimental-Platform-Transformed/UxAS/: Waterways_UxAS.aadl
Phase-2-UAV-Experimental-Platform-Transformed/UxAS/Message Definitions/: CMASI.aadl  ROUTE.aadl
Phase-2-UAV-Experimental-Platform-Transformed/UxAS/Services/: SendMessagesService.aadl  WaypointPlanManagerService.aadl
Phase-2-UAV-Experimental-Platform-Transformed/awas/min/: awas-opt-bundle.js  graphVar.js
Phase-2-UAV-Experimental-Platform-Transformed/diagrams/: SW_SW_Impl.aadl_diagram
Phase-2-UAV-Experimental-Platform-Transformed/kernel/: domain_schedule.c
Phase-2-UAV-Experimental-Platform/CASE/: CASE_Model_Transformations.aadl
Phase-2-UAV-Experimental-Platform/GS/: GS.aadl  GS_SW.aadl
Phase-2-UAV-Experimental-Platform/UAV/: Drivers.aadl  FC.aadl  MC.aadl  SW.aadl  UAV.aadl
Phase-2-UAV-Experimental-Platform/UxAS/: Waterways_UxAS.aadl
Phase-2-UAV-Experimental-Platform/UxAS/Message Definitions/: CMASI.aadl
Phase-2-UAV-Experimental-Platform/UxAS/Services/: AssignmentTreeBranchBoundService.aadl  AutomationRequestValidatorService.aadl  PlanBuilderService.aadl  RouteAggregatorService.aadl  RoutePlannerVisibilityService.aadl  SendMessageService.aadl  (+1 more)
Phase-2-UAV-Experimental-Platform/diagrams/: GS_SW_Pkg_GS_SW_Impl.aadl_diagram  MC_MissionComputer_Impl.aadl_diagram  SW_SW_Impl.aadl_diagram  Waterways_UxAS_Waterways_i.aadl_diagram
TA6_UAV_Exemplar/: .project
TA6_UAV_Exemplar/diagrams/: UAS_UAS_TA6(2).aadl_diagram  UAS_UAS_TA6.aadl_diagram  UAV_UAV_TA6_Type1.aadl_diagram  UAV_UAV_TA6_Type2(2).aadl_diagram  UAV_UAV_TA6_Type2.aadl_diagram
TA6_UxAS/: .project
TA6_UxAS/diagrams/: TA6_Demonstration_UxAS_CASE_Sys_Demo.aadl_diagram
(+449 files in other folders)
